--- a/docs/B类课/1.生物化学.md
+++ b/docs/B类课/1.生物化学.md
@@ -12,9 +12,12 @@
 
 **[生物化学-第八版思维导图.zip](./src/生物化学-第八版思维导图.zip)**
 
-**[生物化学三大代谢图.doc<sup> By Wu YX</sup>](./src/生物化学三大代谢图.doc)**
-
 --W.M.
+
+**[生物化学三大代谢图.doc](./src/生物化学三大代谢图.doc)**
+
+--Wu YX
+
 
 ## 理论课
 
