Update latest commons

--- a/docs/D类课/6.细菌学.md
+++ b/docs/D类课/6.细菌学.md
@@ -4,7 +4,9 @@
 
 乔老师也是一个挺壮的老师（是不是微生物系老板们在组队健身？），上课比较慢条斯理，大部分知识在微生物学课上学过，可以只听感兴趣的部分。
 
-开卷考试，可带电脑，90+比较轻松。
+有课堂展示，自行成组。
+
+开卷考试，可带电脑，90+比较轻松，按照老师的原话：“最后两题可能联系现实或者串联知识”。
 
 我那次考试没有怎么准备，打印了PPT去，最后是94分。建议考前通读一次PPT，标注一下内容。考题量大，但都出自PPT上，有些点比较细，没有通读可能找不着。
 
