--- a/docs/D类课/17.保护生物学.md
+++ b/docs/D类课/17.保护生物学.md
@@ -13,3 +13,15 @@
 开卷考试，老师提前会把题库发出来，自己总结一下答案，然后考试的时候基本就是那些题，顶多是有一点点表述的变化，比较简单，可以做到90+，但是题量很大，要把控好时间。
 
 --舒 2019
+
+## 戚慕杰老师
+
+老师上课以PPT讲授为主，有时候会播放一些课程相关视频。PPT与课本70%-80%内容相同，但也有课本上没有的内容，这部分需要自己拍照保留。
+
+平时很轻松，一般会点名4-5次左右，每次提交一个写着自己名字的小纸条；平时作业只有一次，根据一个问题搜集资料（我们这一年是从物种灭绝的角度论述你所来自的省份或地区，人类活动对物种造成了哪些直接或间接的伤害，可以采取哪些行为加以保护）
+
+期末前老师会给题库（比较全，一定要拍照），根据题库搜集资料，开卷考试，体量有点大，会有比较新颖的题目（我们这一年第一大题是幻灯片上有四张图片，根据图片内容写出与课程相关的知识），比较考验大家对课程知识体系的整体把握
+
+分数可能不算高，但平时确实很轻松，看自己的权衡。
+
+—— 19-
