--- a/docs/出国出境/3.签证.md
+++ b/docs/出国出境/3.签证.md
@@ -4,6 +4,49 @@
 
 [J签流程官方文档](https://www.ustraveldocs.com/cn_zh/cn-niv-typej.asp)
 
+### 申请流程
+
+第1步
+对于非移民签证申请人：
+请认真阅读常见非移民签证中的内容，确定需要申请的签证类型。每类签证都附有相应的申请条件和申请材料说明。根据您的具体情况，选择正确的签证类型。
+请务必通读豁免签证计划中的信息，如果您所在国家为豁免签证计划成员，并且您本人出于商务/旅游目的前往美国，同时停留时间不超过90天，则无需申请签证。
+第2步
+下一步是填写DS-160表，请提前通读DS-160表格填写指南，确保所有信息均正确无误。提交表格之后，将无法进行任何更改。如有疑问，可向移民律师或相关专业翻译人员咨询。预约中心无法提供有关填写DS-160表的支持服务。请牢记DS-160编号以便预约面谈时间。
+第3步
+一旦确定签证类型以后，就进入签证申请费的缴纳环节。请访问签证申请费用页面，了解各种签证类型和相应的签证费用（以美元和本币标示）。
+在支付签证费之前，请查看银行和支付方式页面中的信息。其中包括如何支付签证费的详细介绍。支付完成后，系统将为您创建个人资料，请务必妥善保管收据，以便通过收据编号预约签证面谈。
+第4步
+现在即可开始预约面谈时间！
+请通过支付签证手续费时使用的凭证登录个人资料页面。进入系统之后，即可看到控制面板。
+点击左手侧菜单上的“安排面谈时间”(Schedule Appointment)。
+此操作将启动预约安排流程。请提供：
+•	护照号码：请确保您填写至个人档案的护照号码与您护照上所显示的完全一致，并且必须以英文字母开头（如适用）。
+•	签证申请缴费收据上的编号（如需查询该编号，请点击此处。）
+•	DS-160确认页上的十(10)位条形码编号。请注意：当您输入个人信息时，为了避免输入有误，我们建议您将DS-160确认编号从CEAC网站发送给您的PDF电子确认页里复制，然后粘贴到“DS-160确认编号”栏里。请注意区分如0和O, 1 和I, l和I, S和8, S和5, B 和 8等相似字符。
+在接下来的流程中，需要依次选择签证类型、输入个人信息、添加亲属、选择文件送达地址、确认签证费用的缴纳状态，最后一步是安排面谈时间。添加在此处的同行者必须与主申请人申请相同的签证类型。如果同行者需要申请不同签证，他或她需要单独申请。
+第5步
+请按照约定的时间到美国大使馆进行面谈。请浏览安排面谈时间页面，了解面谈时需要随身携带的材料。
+第6步
+如果签证获批，护照将寄送至您在预约面谈时选择的指定地点
+
+#### DS160填写指南：
+
+在完成 DS-160 时，您应该准备好以下文件：
+•	护照
+•	旅行行程，如果您已经做好旅行安排。
+•	您最近五次访问或前往美国的日期（如果您之前曾去过美国）。您可能还会被要求提供过去五年的国际旅行历史。 
+•	简历或履历 - 您可能需要提供有关您当前和以前的教育和工作经历的信息。 
+•	其他信息 - 根据旅行的预期目的，一些申请人在填写 DS-160 时将被要求提供其他信息。
+一些申请人在填写 DS-160 时需要准备一些额外的信息和文件：
+•	学生和交流访问者（F、J 和 M）：您将被要求提供印在I-20 或 DS-2019上的 SEVIS ID  ，因此您在填写 DS-160 时应准备好此表格。您还将被要求提供您打算就读的学校/课程的地址。此信息也应出现在您的 I-20 或 DS-2019 表格上。 
+•	基于申请的临时工（H-1B、H-2、H-3、CW1、L、O、P、R、E2C）： 填写 DS-160 时， 您应该有一份I-129的副本 。 
+•	其他临时工： 在填写 DS-160 时，您将被要求提供有关您雇主的信息，包括雇主的地址。
+
+照片：彩色
+•	调整大小使头部介于 1 英寸和 1 3/8 英寸（22 毫米和 35 毫米）之间，或者是图像从下巴底部到头部顶部的总高度的 50% 和 69%。查看 照片合成模板 以了解更多尺寸要求的详细信息。
+•	在过去 6 个月内拍摄以反映您当前的外观
+•	在纯白色或灰白色背景前拍摄
+
 建议准备两个文件夹，一个装必备材料，一个装支持性材料。
 
 ### 必备材料：（文件夹1）
@@ -29,6 +72,23 @@
 16.	户口本复印件
 17.	全家福
 
+### 保险要求
+
+需要涵盖入境前到项目开始前
+所有 J-1 交流访问者和任何 J-2 家属必须有符合美国国务院规定的以下最低保险范围的保险： 
+•	每次事故或疾病至少 100,000 美元的医疗福利；
+•	遗体送返保险金额为 25,000 美元；
+•	50,000 美元的医疗后送至本国保险；
+•	每次事故或疾病的免赔额不超过 500 美元；
+•	可能需要对现有行业标准确定的合理等待期；
+•	每次事故或疾病不得要求交流访问者支付超过 25% 的医疗费用；
+•	保险公司必须满足最低行业评级要求：
+o	AM 最佳评级为“A-”或以上；
+o	麦格劳希尔金融/标准普尔的索赔支付能力评级为“A-”或以上；
+o	Weiss Research, Inc. 评级为“B+”或以上；
+o	惠誉评级公司评级为“A-”或以上；
+o	穆迪投资者服务评级为“A3”或以上；
+o	或国务院可能不时指定的其他评级。
 
 ## 2.预约签证
 
